--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+numpy<2
 langchain==0.1.0
 langchain-community==0.0.10
 transformers==4.36.2
@@ -8,3 +9,11 @@ pypdf==3.17.4
 python-dotenv==1.0.0
 huggingface-hub==0.20.2
 fpdf==1.7.2
+unstructured[pdf]==0.12.4
+pdfminer.six==20231228
+pillow==10.2.0
+pikepdf==8.10.1
+opencv-python-headless==4.9.0.80
+pytesseract==0.3.10
+matplotlib==3.8.2
+streamlit==1.31.0
